kubernetes/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elearning-backend
  labels:
    app: elearning-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elearning-backend
  template:
    metadata:
      labels:
        app: elearning-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: master
      containers:
        - name: elearning-backend
          image: anasmnasri/elearning-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
