kubernetes/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elearning-frontend
  labels:
    app: elearning-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elearning-frontend
  template:
    metadata:
      labels:
        app: elearning-frontend
    spec:
      containers:
        - name: elearning-frontend
          image: anasmnasri/elearning-frontend:latest  # 🔁 remplace par ton image buildée
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config
      restartPolicy: Always
