kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: elearning-backend-service
spec:
  selector:
    app: elearning-backend
  ports:
    - protocol: TCP
      port: 5000           # port interne au cluster
      targetPort: 5000     # port du conteneur
  type: ClusterIP          # accessible uniquement en interne (nginx le proxifie)
