kubernetes/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: elearning-frontend-service
spec:
  selector:
    app: elearning-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30300
  type: NodePort
