kubernetes/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elearning-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
  - host: elearning.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: elearning-backend-service
            port:
              number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elearning-ingress-frontend
spec:
  ingressClassName: nginx
  rules:
  - host: elearning.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elearning-frontend-service
            port:
              number: 80
